--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,6 +180,17 @@ nav a:hover {
 
 }
 
+.introduction {
+    width: 93%;
+    box-shadow: 0 5px 10px #8F410D;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #FFC8A3;
+    border: 1px solid #8F410D; 
+    align: center; 
+}
+
 .textaligncenter {
     text-align: center;
 }
