added followings module, added django-endless-pagination

--- a/members/templates/members/index.html
+++ b/members/templates/members/index.html
@@ -40,6 +40,7 @@
         <a href='#'  class='btn'>Browse my squaresensor feed</a>
         <a href='{% url 'goodusers:index' %}' class='btn'>Find talented Instagram photographers</a>
         <a href='{% url 'friends:index' %}'   class='btn'>Find my new Instagram friends</a>
+        <a href='{% url 'followings:index' %}'   class='btn'>Suggest new Instagram talents</a>
         </div>
         </section>        
     </article>
