--- a/followings/templates/followings/index_page.html
+++ b/followings/templates/followings/index_page.html
@@ -1,32 +1,7 @@
-{% extends "base.html" %}
-{% block stylesheets %}
-    {{ block.super }}
-    <link rel="stylesheet" href="{{STATIC_URL}}css/friends-table.css">
-    <link rel="stylesheet" href="{{STATIC_URL}}css/friends.css">
-{% endblock %}
+{% load endless %}
 
-{% block javascript %}
-    {{ block.super }}
-    <script src="{{STATIC_URL}}js/friends.js"></script>
-{% endblock %}
-
-{% block pagetitle %} - Search for Instagram Friends{% endblock %}
-
-{% block content %}
-    <article>
-        <section>
-        
-			<h2>List of potential new Instagram friends</h2>
-			{% if friends_list %}
-			<div class="introduction" id='introduction_text'>
-			<p>This is a list of your potential new Instagram friends and their best photos. They have similar photographic interests as you have.</p>
-			<p>Please be polite and supportive when interacting with people. Please do not spam with comments and likes.</p>
-			<p>You will be allowed to interact with one photo per user.</p>
-			</div>
-
-                {% load endless %}
-                {% paginate friends_list %}
-			        {% for friend in friends_list %}
+{% paginate 5 followings_list %}			        
+			        {% for following in followings_list %}
 				        <div class="friends-table">
 					        <table id="friends-table" summary="Potential Instagram Friends">
 						    <tbody>
@@ -38,8 +13,8 @@
 					            </tr>
 					            <tr>
 						            <td><div class="class="friendusername">
-						            <img src="{{ friend.instagram_profile_picture_URL}}"></img><br>
-						            <a href='{% url 'friends:details' friend.instagram_user_name %}'>{{ friend.instagram_user_name }}</a></div></td>
+						            <img src="{{ following.instagram_profile_picture_URL}}"></img><br>
+						            <a href='{% url 'followings:details' following.instagram_user_name %}'>{{ following.instagram_user_name }}</a></div></td>
 						            <td></td>
 						            <td></td>
 						            <td></td>
@@ -48,17 +23,17 @@
 					            <tr>
 				        	    <td colspan="4">
 				        	        <div class="fivethumbscontainersuper">
-						        	    <div class="fivethumbscontainer" id="fivethumbscontainer_{{ friend.id }}">
+						        	    <div class="fivethumbscontainer" id="fivethumbscontainer_{{ following.id }}">
 								        	{% if photos_dict %}
 							                    {% for key, val in photos_dict.items %}
-							                        {% if key == friend.id %}
+							                        {% if key == following.id %}
 								                        {% if val %}
 								                            {% for photo in val %}
 										                        <div class="friendthumbcontainer">		                            
 										                            <img class="friendthumb" id="friendthumb_{{ photo.instagram_photo_id }}" 
 										                             src="{{ photo.instagram_thumbnail_URL }}" 
 										                             title="{{ photo.instagram_caption }}"
-										                             onclick="friend_photo_selected('{{ photo.instagram_photo_id }}', '{{ key }}', '{{ STATIC_URL }}', '{{ photo.instagram_low_resolution_URL }}');"></img>
+										                             onclick="following_photo_selected('{{ photo.instagram_photo_id }}', '{{ key }}', '{{ STATIC_URL }}', '{{ photo.instagram_low_resolution_URL }}');"></img>
 										                        </div>
 									                        {% endfor %}
 									                    {% else %}
@@ -73,10 +48,10 @@
 				                </tr>
 					            <tr>
 							        <td colspan="4">
-							        <div id="rate_friend_{{ friend.instagram_user_id }}" class="ratingcontainer">
+							        <div id="rate_following_{{ following.instagram_user_id }}" class="ratingcontainer">
 			                            <div class="ratetext">
 			                            Rate on Squaresensor
-			                            <br>@{{friend.instagram_user_name}}
+			                            <br>@{{following.instagram_user_name}}
 			                            </div>
 								        <div class="fivestars">FIVE STARS</div>
 							        </div>
@@ -84,7 +59,7 @@
 						        </tr>	
 						        <tr>
 							        <td colspan="4">
-							        <p>Best photos by @{{friend.instagram_user_name}}. Click on the photo to interact.
+							        <p>Best photos by @{{following.instagram_user_name}}. Click on the photo to interact.
 							        </td>
 						        </tr>				       
 					        </tbody>
@@ -92,13 +67,4 @@
 	                    </div>
 				        
 			        {% endfor %}
-                {% show_pages %}				        
-
-			{% else %}
-			<p>No potential Instagram friends suitable for you available in our database.</p>
-			
-			{% endif %}
-        
-        </section>
-    </article>
-{% endblock %}
+{% show_more %}			        
