--- a/assets/css/friends.css
+++ b/assets/css/friends.css
@@ -1,46 +1,55 @@
 
 .friendthumbcontainer {
-    margin: 2px;
-    float: left;
-    align: left;    
+    margin: 10px;
+   
 }
 
-fivethumbscontainersuper {
-    margin: 2px;
+.fivethumbscontainersuper, .frienddatacontainer, .friends-table {
+    margin: 5px;
     align: left; 
-    height: 300px;
+    border: 1px solid #000000;
+    width: 335px;
+    box-shadow: 0 5px 5px #B5ACA7; 
 }
 
 .friendthumb {
     margin: 5px;
-    align: center;
-    box-shadow: 0 5px 5px #B5ACA7; 
+    box-shadow: 0 5px 5px #B5ACA7;
+}
+
+.friendimagecontainer {
+    margin: 5px;
+    box-shadow: 0 5px 5px #B5ACA7;
+    width: 150px;
+}
+
+.friendtextcontainer {
+    margin: 10px;
 }
 
 .ratingcontainer {
-//    border: 1px solid #000000;
-	margin: 10px;
-	width:95%;
-	height:70px;
+    border: 1px solid #000000;
+
 	background: #FFFFFF;
+	margin-bottom: 5px;
 }
 
 .ratetext {
 //    border: 1px solid #000000;
 	padding: 10px;
 	margin: 0px;
-	width: 200px;
-	height: 30px;
-	float: left;
+
+
+
 }
 
 .fivestars {
 //    border: 1px solid #000000;
-	width: 100px;
-	height: 30px;    
+
+    
 	padding: 10px;
 	margin: 0px;
-	float: right;
+
 }
 
 .friendusername {
