--- a/friends/templates/friends/index.html
+++ b/friends/templates/friends/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block stylesheets %}
     {{ block.super }}
-    <link rel="stylesheet" href="{{STATIC_URL}}css/friends-table.css">
     <link rel="stylesheet" href="{{STATIC_URL}}css/friends.css">
 {% endblock %}
 
@@ -28,26 +27,13 @@
                 {% paginate friends_list %}
 			        {% for friend in friends_list %}
 				        <div class="friends-table">
-					        <table id="friends-table" summary="Potential Instagram Friends">
-						    <tbody>
-					            <tr>
-					                <td>Username</td>
-					                <td>Interacted</td>
-					                <td>Result</td>
-					                <td>Follow</td>
-					            </tr>
-					            <tr>
-						            <td><div class="class="friendusername">
-						            <img src="{{ friend.instagram_profile_picture_URL}}"></img><br>
-						            <a href='{% url 'friends:details' friend.instagram_user_name %}'>{{ friend.instagram_user_name }}</a></div></td>
-						            <td></td>
-						            <td></td>
-						            <td></td>
-						        </tr>
-		
-					            <tr>
-				        	    <td colspan="4">
-				        	        <div class="fivethumbscontainersuper">
+					        
+					            <div class="frienddatacontainer">
+						            <div id='#frienddatacontainer_{{ friend.id }}'></div>
+						            <div class="friendimagecontainer"><img src="{{ friend.instagram_profile_picture_URL}}"></img></div>
+						            <div class="friendtextcontainer"><a href='{% url 'friends:details' friend.instagram_user_name %}'>{{ friend.instagram_user_name }}</a></div>
+					            </div>
+                                    <div class="fivethumbscontainersuper">
 						        	    <div class="fivethumbscontainer" id="fivethumbscontainer_{{ friend.id }}">
 								        	{% if photos_dict %}
 							                    {% for key, val in photos_dict.items %}
@@ -56,7 +42,7 @@
 								                            {% for photo in val %}
 										                        <div class="friendthumbcontainer">		                            
 										                            <img class="friendthumb" id="friendthumb_{{ photo.instagram_photo_id }}" 
-										                             src="{{ photo.instagram_thumbnail_URL }}" 
+										                             src="{{ photo.instagram_low_resolution_URL }}" 
 										                             title="{{ photo.instagram_caption }}"
 										                             onclick="friend_photo_selected('{{ photo.instagram_photo_id }}', '{{ key }}', '{{ STATIC_URL }}', '{{ photo.instagram_low_resolution_URL }}');"></img>
 										                        </div>
@@ -67,12 +53,10 @@
 								                    {% endif %}
 							                    {% endfor %}
 						                    {% endif %}
-				                        <div>
-				                    </div>
-		                        </td>
-				                </tr>
-					            <tr>
-							        <td colspan="4">
+				                        </div>
+				                    </div>					           
+					           
+					           
 							        <div id="rate_friend_{{ friend.instagram_user_id }}" class="ratingcontainer">
 			                            <div class="ratetext">
 			                            Rate on Squaresensor
@@ -80,15 +64,7 @@
 			                            </div>
 								        <div class="fivestars">FIVE STARS</div>
 							        </div>
-							        </td>
-						        </tr>	
-						        <tr>
-							        <td colspan="4">
-							        <p>Best photos by @{{friend.instagram_user_name}}. Click on the photo to interact.
-							        </td>
-						        </tr>				       
-					        </tbody>
-		                    </table>
+							        
 	                    </div>
 				        
 			        {% endfor %}
